--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,10 @@ jobs:
     steps:
       - name: git clone SFML
         run: git clone https://github.com/SFML/SFML.git
-      
-      - name: cd SFML
-        run: cd SFML
 
       - name: cmake SFML
         shell: cmd
-        run: cmake.exe -G"MinGW Makefiles" -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX="%~dp0build/sfml"  -B./build
+        run: cd SFML && cmake.exe -G"MinGW Makefiles" -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX="%~dp0build/sfml"  -B./build
       
       - name: cd build
         run: cd build
