- update .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
 
       - name: cmake SFML
         shell: cmd
-        run: cd SFML && cmake.exe -G"MinGW Makefiles" -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX="build/sfml" -B./build
+        run: cd SFML && cmake.exe -G"MinGW Makefiles" -DBUILD_SHARED_LIBS=OFF -DOPENGL_ES=TRUE -DCMAKE_INSTALL_PREFIX="build/sfml" -B./build
       
       - name: mingw build 
         shell: cmd
