--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: SFML-prebuilt
-          path: SFML
+          path: SFML\build
 
         
