- update .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Release prebuilt
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "SFML\build"
+          artifacts: "SFML/build"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
