--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,13 @@ jobs:
         with:
           type: 'zip'
           path: "SFML/build"
-          filename: "${{ env:mingwTargetZip }}"
+          filename: "${{ env.mingwTargetZip }}"
           exclusions: '*.git* /*node_modules/* .editorconfig'
           
       - name: Release prebuilt
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "${{ env:mingwTargetZip }}"
+          artifacts: "${{ env.mingwTargetZip }}"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
