--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -1,47 +1,54 @@
-name: sfml-prebuilt-release-actions-workflow
+name: cpp-cmake-mingw-prebuilt-release-actions-workflow
 on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'c*'
 
 jobs:
   build:
     name: Create Release
-    runs-on: windows-latest
+    runs-on: windows-2019
     env:
-      mingwTargetZip: sfml-${{ github.ref_name }}-mingw.zip
+      libraryName: SFML
+      cmakeInstallationPath: SFML-installation
+      tagName: 2.5.1 # target tag
+      mingwTargetZip: SFML-${{ github.ref_name }}-x86_64-posix-seh-rev0-8.1.0.zip
     steps:
-      - name: git clone SFML
-        run: git clone --branch 2.5.1 https://github.com/SFML/SFML.git
-
-      - name: cmake SFML
+      - name: git clone
         shell: cmd
-        run: cd SFML && cmake.exe -G"MinGW Makefiles" -DBUILD_SHARED_LIBS=OFF -DSFML_USE_SYSTEM_DEPS=FALSE -DOPENGL_ES=TRUE -DCMAKE_INSTALL_PREFIX="build/sfml" -B./build
-      
-      - name: mingw build 
+        run: git clone --recursive https://github.com/SFML/SFML.git && cd SFML && git checkout ${{ env.tagName }}
+       
+      - name: curl x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
         shell: cmd
-        run: cd SFML\build && mingw32-make install
+        run:  cd /d ${{ github.workspace }} && curl https://github.com/2641797006/c/blob/master/GCC-zip/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z?raw=true -L --output x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z && dir && 7z.exe x x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
+        
+      - name: curl cmake-3.24.0-windows-x86_64.zip
+        shell: cmd
+        run: cd /d ${{ github.workspace }} && curl https://github.com/Kitware/CMake/releases/download/v3.24.0/cmake-3.24.0-windows-x86_64.zip -L --output cmake-3.24.0-windows-x86_64.zip && dir && 7z.exe x cmake-3.24.0-windows-x86_64.zip
+        
+      - name: set PATH, check mingw version, cmake generate, build and install
+        shell: cmd
+        run: |
+            set PATH=^
+            ${{ github.workspace }}\mingw64;^
+            ${{ github.workspace }}\mingw64\bin;^
+            ${{ github.workspace }}\cmake-3.24.0-windows-x86_64\bin;
+            gcc --version &&^
+            cd SFML && cmake.exe -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX="build/${{ env.cmakeInstallationPath }}" -B./build &&^
+            cd build && cmake --build . && cmake --install . 
         
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
           type: 'zip'
-          path: "SFML/build"
+          directory: "SFML/build/${{ env.cmakeInstallationPath }}"
           filename: "${{ env.mingwTargetZip }}"
-          
+        
       - name: Release prebuilt
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "${{ env.mingwTargetZip }}"
+          artifacts: "SFML/build/${{ env.cmakeInstallationPath }}/${{ env.mingwTargetZip }}"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
-
-          
-          
-          
-          
-          
-          
-        
-        
